Fixes double click and scrollbars

--- a/elements/reigns/src/style.css
+++ b/elements/reigns/src/style.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   height: 100%;
   user-select: none;
-  overflow-x: hidden;
+  overflow: hidden; /* hides scrollbars */
 }
 
 body,
@@ -141,9 +141,9 @@ button {
   height: 10px;
   border-radius: 5px;
   background-color: var(--color-primary);
-  transition: width 1s ease-in, background-color var(--stats-color-transition-duration) ease-in;
+  transition: width 1s ease-in,
+    background-color var(--stats-color-transition-duration) ease-in;
 }
-
 
 .fade {
   transition: opacity var(--card-fade-duration) ease;
@@ -178,7 +178,7 @@ button {
   bottom: 0;
   left: 0;
   right: 0;
- }
+}
 
 .question__bearer {
   font-size: 2vw;
@@ -205,7 +205,7 @@ button {
   display: flex;
   flex: 1;
   padding: 1vw;
-  background-color:#dddddd;
+  background-color: #dddddd;
   transform: rotateX(45deg);
   transform-origin: top;
 }
